Sat Jul 09 07:08:03 GMT 2011  Olly Betts <olly@survex.com>

	* languages/compiler/analyser.c: Change reporting of line number for
	  repeated string in among to use "FILE:LINE:" prefix.

Sat Jul 09 01:04:18 GMT 2011  Olly Betts <olly@survex.com>

	* common/pretty.h: Don't dereference a NULL pointer.

Fri Jul 08 14:28:42 GMT 2011  Olly Betts <olly@survex.com>

	* common/output.h,common/pretty.h: Fix invalid templates in pretty.h.

Fri Jul 08 12:55:19 GMT 2011  Olly Betts <olly@survex.com>

	* common/pretty.h: Fix template for pretty printing a std::list.

Thu Jul 07 10:40:53 GMT 2011  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Add assertions that the index is in range when
	  dereferencing MSetIterator and ESetIterator.

Wed Jul 06 08:20:56 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc,backends/chert/chert_table.cc: Trust
	  new to throw std::bad_alloc rather than returning NULL.

Wed Jul 06 05:50:38 GMT 2011  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: Remove testcase serialisequery1.
	* tests/api_serialise.cc: Extend serialise_query1 to cover equivalent
	  cases via the API.

Tue Jul 05 01:20:59 GMT 2011  Olly Betts <olly@survex.com>

	* common/debuglog.h: Add QUERY category for debug logging.

Fri Jul 01 04:55:02 GMT 2011  Olly Betts <olly@survex.com>

	* common/unordered_map.h: Add my <unordered_map> portability wrapper
	  which was used by the JNI java bindings.  It's not currently used
	  here, but is likely to be useful (two of the GSoC projects are
	  using unordered_map).

Wed Jun 29 12:16:59 GMT 2011  Richard Boulton <richard@tartarus.org>

	* languages/compiler/tokeniser.c: Fix memory leak (of file name) in
	  snowball compiler introduced by last commit.

Wed Jun 29 07:49:36 GMT 2011  Olly Betts <olly@survex.com>

	* languages/compiler/: Report "FILE:LINE:" before each error so tools
	  like vim's quickfix mode can parse this and bring up the line with
	  the error automatically.
