@@ -1,3 +1,8 @@
+Sat Jul 09 14:00:08 GMT 2011  Olly Betts <olly@survex.com>
+
+	* include/xapian/stem.h,languages/stem.cc: Stem::operator= now returns
+	  a reference to the assigned-to object.
+
 Sat Jul 09 07:08:03 GMT 2011  Olly Betts <olly@survex.com>
 
 	* languages/compiler/analyser.c: Change reporting of line number for
